--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "i18next-browser-languagedetector":"6.1.3"
   },
   "scripts": {
-    "start": "DISABLE_ESLINT_PLUGIN=true REACT_EDITOR=true react-scripts --openssl-legacy-provider start",
+    "start": "DISABLE_ESLINT_PLUGIN=true REACT_EDITOR=true react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "prettier:check": "prettier --check .",
