--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Poolify APP",
+  "name": "POOLIFY Finance, the next generation of DEFI",
   "icons": [
     {
-      "src": "assets/img/cropped-Poolify-Logo-Color-32x32",
+      "src": "assets/img/cropped-Poolify-Logo-Color-32x32.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/png"
     },
     {
-      "src": "logo192.png",
+      "src": "assets/img/cropped-Poolify-Logo-Color-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "assets/img/cropped-Poolify-Logo-Color-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
