--- a/package.json
+++ b/package.json
@@ -8,38 +8,40 @@
     "@chakra-ui/theme-tools": "1.3.6",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/raleway": "^4.5.3",
     "@metamask/jazzicon": "2.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
     "@walletconnect/web3-provider": "^1.6.6",
     "@web3auth/web3auth": "0.2.4",
-    "walletlink": "^2.3.0",
-    "web3modal":"1.9.5",
-    "web3":"1.7.0",
+    "axios": "0.26.0",
+    "bignumber.js": "9.0.2",
+    "blockchain-addressbook": "0.16.4",
+    "eth-multicall": "1.4.0",
     "framer-motion": "^4.1.17",
+    "i18next": "21.6.13",
+    "i18next-browser-languagedetector": "6.1.3",
     "magic-sdk": "7.0.0",
     "moralis": "1.3.2",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-dom": "^17.0.2",
     "react-error-overlay": "6.0.9",
+    "react-i18next": "11.15.5",
     "react-icons": "^3.11.0",
     "react-moralis": "1.3.1",
     "react-query": "^3.34.16",
+    "react-redux": "^7.2.1",
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
-    "react-i18next":"11.15.5",
-    "web-vitals": "^0.2.4",
-    "bignumber.js":"9.0.2",
-    "eth-multicall":"1.4.0",
-    "blockchain-addressbook":"0.16.4",
-    "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "axios":"0.26.0",
-    "i18next":"21.6.13",
-    "i18next-browser-languagedetector":"6.1.3"
+    "sf-font": "^1.0.0",
+    "walletlink": "^2.3.0",
+    "web-vitals": "^0.2.4",
+    "web3": "1.7.0",
+    "web3modal": "1.9.5"
   },
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true REACT_EDITOR=true react-scripts start",
