--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "web3modal": "1.9.5"
   },
   "scripts": {
-    "start": "DISABLE_ESLINT_PLUGIN=true REACT_EDITOR=true react-scripts start", // NODE_OPTIONS=--openssl-legacy-provider
+    "start": "DISABLE_ESLINT_PLUGIN=true REACT_EDITOR=true react-scripts start",
+    "start-safe":"DISABLE_ESLINT_PLUGIN=true REACT_EDITOR=true NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "prettier:check": "prettier --check .",
