--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
     "@walletconnect/web3-provider": "^1.6.6",
+    "@metamask/detect-provider":"1.2.0",
     "@web3auth/web3auth": "0.2.4",
     "axios": "0.26.0",
     "bignumber.js": "9.0.2",
